app/assets/stylesheets/views/browse.scss
.category-page {

  header.page-header {

    hgroup {
      padding: 1em 2em 0 2em;

      h1 {
        @include core-36;
        padding-left: 0;
        padding-right: 0;
        width: 75%;

        @include media(mobile) {
          width: auto;
        }
      }

      h2 {
        @include core-24;
        color: inherit;
        margin: 0;
      }
    }
  }

  .browse-container {
    background-color: #fff;
    min-height: 35em;
    padding: 0 2em 2em 2em;

    .category-description {
      margin-bottom: 2em;
      width: 65.5%;

      @include media(mobile) {
        margin-bottom: 1em;
        width: auto;
      }

      p {
        @include core-16;
        margin: 0;
      }
    }

    .detailed-guidance {
      border: solid 4px #2B8CC4;
      padding: 1em 1em;
      margin-top: 2em;

      h2 {
        padding: 0 (16/24 * 1em); // heading is 24, base is 16
      }

      li {
        float: left;
        width: 50%;

        h3 {
          padding: 0 (16/19 * 1em); // this heading is 19, base is 16
        }

        p {
          padding: 0 1em;
        }

        &:nth-child(odd) {
          clear: left;
        }
      }

    }

    ul {
      margin: 0;
      padding: 0;

      li {
        list-style: none;
        margin-bottom: 1em;

        p {
          @include core-16;
          margin: 0;
          word-wrap: break-word;
        }
      }

      &.categories {

        h2 {
          margin: 0;
        }
      }

      &.sub-categories {
        padding: 0;

        li {
          border-top: solid 1px #C9D0D0;
          float: left;
          margin-right: 3.5%;
          margin-bottom: 1.5em;
          width: 31%;

          &:nth-child(3n) {
            margin-right: 0;
          }

          &:nth-child(3n+1) {
            clear: left;
          }

          @include media(mobile) {
            float: none;
            margin-right: 0;
            width: auto;
          }

          @include ie-lte(7) {
            min-height: 9em;
            width: 30.9%;
          }
        }
      }

      &.content-list {
        padding: 1em 0 0 0;
        width: 65.5%;

        @include media(mobile) {
          width: auto;
        }

        li {

          h2 {
            @include core-19;
          }
        }
      }
    }
  }
}

